--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+mesa (18.1.4-1) unstable; urgency=medium
+
+  [ Emilio Pozuelo Monfort ]
+  * New upstream release.
+
+  [ Simon McVittie ]
+  * Make libwayland-dev Build-Depends consistent with -dev Depends
+
+ -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 15 Jul 2018 12:59:44 +0200
+
 mesa (18.1.3-1) unstable; urgency=medium
 
   * New upstream release.
